test/parser/invalid/bad-qualifiers.glsl
int lowp a;
invalid_qualifier int b;
subroutine() int c;
layout() int d;
